# openapi-schema

./: Cargo.toml  LICENSE  README.md
data/: swagger.json
src/: lib.rs
src/extension/: extension.rs  mod.rs
src/v2/: mod.rs  schema.rs
src/v3/: mod.rs  schema.rs
tests/: openapi.json  swagger.json  test_v2.rs
