[package]
name = "openapi-schema"
version = "0.1.0"
edition = "2021"
description = "Rust structure mapped to Swagger"
keywords = ["openapi","swagger","schema","OAS"]
authors = ["denganjia"]
repository = "https://github.com/denganjia/openapi-schema"
homepage = "https://github.com/denganjia/openapi-schema"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.163",features=["derive"]}
